Mon Dec 12 13:20:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * NEWS:

        Added Nanbor's changes from the release notes.

Fri Dec  9 13:39:10 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/Any_Handler.h

	Added a missing include for the versioned namespace macros.

Fri Dec  9 09:18:01 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* ciao/Server_init.h
	
	Added a missing include for the versioned namespace macros.
	
Thu Dec 08 21:34:36 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* NEWS

          Updated the NEWS file to capture ReDaC stuff.

Thu Dec  8 15:38:02 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/Old_Config_Handlers/DT_Handler.h:
	* ciao/Client_init.h:
	* ciao/Context_Impl_T.h:
	* ciao/Server_init.h:
	* ciao/Upgradeable_Context_Impl_T.h:
	* tools/Config_Handlers/Any_Handler.h:

	  Fixed versioned namespace support.  The versioning macros calls
	  around forward declarations in the CORBA namespace were
	  missing.

Thu Dec 08 08:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeManager_Impl.cpp:
          Fixed compile errors with VxWorks

Wed Dec 07 18:05:35 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* ciao/Deployment.idl
	* ciao/Deployment_Core.idl
	* doc/index.html

	Document CIAO specific interface extension/modifications.

Wed Dec  7 12:41:22 2005  Boris Kolpackov  <boris@kolpackov.net>

	* CIDLC/ExecImplGenerator.cpp:
	* CIDLC/ExecImplHeaderGenerator.cpp:
	* CIDLC/ExecImplSourceGenerator.cpp:
	* CIDLC/ExecutorMappingGenerator.cpp:
	* CIDLC/ServantGenerator.cpp:
	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:
	* CCF/Example/CIDL/LocalExecutorMapping/ExecutorMappingGenerator.cpp:

	Fixed a bug in regular expressions that are used to get rid of
	file suffixes.

Tue Dec 06 12:33:27 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp