@@ -52,24 +52,42 @@ cvs-id    : $Id$
 </head>
 
 <body>
-<p>
-The C++ source files in this directory are compiled into the
-code generators and driver for the CIAO CIDL compiler. CORBA
-Compiler Framework (CCF) provides the front-end for the compiler.</p>
+<h1>CIAO CIDL compiler README</h1>
+<p>Before continuing, please note that
 
-<p><a href="http://www.dre.vanderbilt.edu/cidlc/binary/">Pre-built binary
+<a href="http://www.dre.vanderbilt.edu/cidlc/binary/">pre-built binary
 executables of CIDL compiler</a> are available for different platforms.</p>
 
-<p>To build CIDL compiler you will need to compile CCF libraries
+<p>The C++ source files in this directory are compiled into the
+code generators and driver for the CIAO CIDL compiler. CORBA
+Compiler Framework (CCF) provides the front-end for the compiler.
+To build CIDL compiler you will need to compile CCF libraries
 first. Please refer to <a href="../CCF/Documentation/Build.html">
 instructions for building CCF libraries</a>.</p>
 
-<p>After you have CCF libraries compiled you can build CIDL compiler
-with makefiles on UNIX</p>
+<p>After you have compiled the CCF libraries, you are ready to build the
+CIDLC compiler. In order to build the compiler, you must generate the
+appropriate project files. If there are makefiles, or project solutions,
+already in the directory, please disgard them since because they can be
+out-of-date, or invalid. To regenerate all project files, type the following
+command:
+<pre>
+%> $ACE_ROOT/bin/mwc.pl -type &lt;project-type&gt; -static -features cidl=1,exceptions=1,boost=1 CIDLC.mwc
+</pre>
 
-<code> $ make -f Makefile.alt</code>
+Once MPC finishes generating the project files, you can now build CIDLC.
 
-<p>or by using VC 7.1 project on Windows.</p>
+<ul>
+<li>On Linux/UNIX:
+<p>If you are building with a make utility, e.g., gmake, use the following command to build CCF:
+
+<pre>%> gmake cidl=1 exceptions=1 boost=1</pre></p></li>
+<li>On Windows: <p>Just open the generated solution file.</p></li>
+</ul>
+<p><b>Note:</b> If you are building CCF on a Windows platform, use <code>%ACE_ROOT%\bin\mwc.pl</code> instead
+
+<code>of $ACE_ROOT/bin/mwc.pl</code>. Also, for a list of project types and other command-line options
+supported by MPC, type <code>$ACE_ROOT/bin/mwc.pl --help</code>.</p>
 
 </body>
 </html>
